# uv_database_update

./: .gitignore  README.md  database_update.py  datetest.ipynb  datetest.py  de_controller.py  de_extract.py  de_load.py  de_transform.py  elt_config.py  elt_controller.py  elt_extract.py  elt_load.py  elt_sources.py  elt_transform.py  mailchimp_export.py  mailchimp_update.py  meta_update.py  mp_controller.py  mp_extract.py  mp_load.py  mp_transform.py  pyproject.toml  requirements.txt  token_refresh.py  upload_test.py
